--- a/css/header.css
+++ b/css/header.css
@@ -15,7 +15,7 @@
 }
 
 .menu a+a{
-margin-left: .75rem;  
+margin-left: .25rem;  
 }
 
 .nav-container {
@@ -24,6 +24,7 @@ margin-left: .75rem;
   align-items: center;
   position: relative;
   height: 100%;
+  padding-right: 5px;
   z-index: 1;
 }
 
@@ -40,7 +41,7 @@ margin-left: .75rem;
 .search-container input {
   font-weight: 600;
   display: inline-block;
-  padding: 8px 5px;
+  padding: 0;
   border-radius: 7px;
   width: 100%;
   border: none;
