--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@300;400;500&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -52,8 +53,8 @@
             <br> 임연수 ©2022. ALL RIGHTS RESERVED.
         </div>
     </footer>
-
-    <script src="/js/search.js" type="text/javascript"></script>
+    
+    <script src="{{%site.baseurl}}/js/search.js" type="text/javascript"></script>
 </body>
 
 </html>
