--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,3 +9,11 @@
     </div>
 </nav>
 <ul class="results-container" id="results-container"></ul>
+<script src="{{site.baseurl}}/assets/js/search.js" type="text/javascript"></script>
+<script>
+    SimpleJekyllSearch({
+        searchInput: document.getElementById("search-input"),
+        resultsContainer: document.getElementById("results-container"),
+        json: "{{site.baseurl}}/search.json",
+    });
+</script>
