--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{{site.baseurl}}/favicon2.png" type="image/png" sizes="30x30">
-    <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
-
     <title>{% if page.title %}{{page.title}}&nbsp;|&nbsp;{% endif %}임연수의 기술 블로그</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" href="{{site.baseurl}}/favicon2.png" type="image/png" sizes="30x30">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
+
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="임연수의 기술 블로그">
@@ -46,6 +47,7 @@
 
     <main class="default-box main">
         {{content}}
+        <script src="{{site.baseurl}}/assets/js/search.js" type="text/javascript"></script>
     </main>
 
     <footer class='{{page.mastfooterClass}}'>
@@ -53,6 +55,7 @@
             <br> 임연수 ©2022. ALL RIGHTS RESERVED.
         </div>
     </footer>
+
 
 </body>
 
