commit before pull

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <title>{% if page.title %}{{page.title}}&nbsp;|&nbsp;{% endif %}임연수의 기술 블로그</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="{{site.baseurl}}/favicon2.png" type="image/png" sizes="30x30">
+    <link rel="icon" href="{{site.baseurl}}/favicon.png" type="image/png" sizes="30x30">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
 
 
@@ -47,7 +47,6 @@
 
     <main class="default-box main">
         {{content}}
-        <script src="{{site.baseurl}}/assets/js/search.js" type="text/javascript"></script>
     </main>
 
     <footer class='{{page.mastfooterClass}}'>
