Added: logo to go back home

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,11 @@
 <nav class="nav-container">
+    <div class="logo">
+        <div class="img-wrapper">
+          <a href="/"><img src="{{site.baseurl}}/favicon.png" alt="로고"></a>  
+        </div>
+    </div>
     <div class="menu search-container" id="search-container">
-        <input type="text" id="search-input" placeholder="임연수의 기술 블로그">
+        <input type="text" id="search-input" placeholder="Search or jump to...">
     </div>
     <div class="menu">
         <a href="{{site.baseurl}}/"
