--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
 {% include_relative reset.css %}
 {% include_relative root.css %}
 {% include_relative common.css %}
-{% include_relative header.css %}
+{% include_relative nav.css %}
 {% include_relative footer.css %}
 {% include_relative syntax-highlight-monokai.css %}
 {% include_relative home.css %}
