--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -14,18 +14,38 @@
   width: var(--width-laptop);
 }
 
-.menu a+a{
-margin-left: .25rem;  
+.menu a {
+  font-size: 0.9rem;
+}
+
+.menu a + a {
+  margin-left: 0.35rem;
 }
 
 .nav-container {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 30px auto 1fr;
+  gap: 7px;
   align-items: center;
   position: relative;
   height: 100%;
   padding-right: 5px;
   z-index: 1;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.logo .img-wrapper {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+.logo img {
+  width: 100%;
 }
 
 .nav-container div:nth-last-child(1) {
@@ -45,7 +65,7 @@ margin-left: .25rem;
   border-radius: 7px;
   width: 100%;
   border: none;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 .search-container input:focus {
@@ -71,7 +91,7 @@ margin-left: .25rem;
   line-height: 1.35rem;
 }
 
-.results-container a{
+.results-container a {
   text-decoration: none;
 }
 
@@ -86,7 +106,6 @@ ul.breadcrumb li {
 ul.breadcrumb {
   list-style-type: none;
   padding: 0 5px;
-  font-size: 1em;
   font-weight: 400;
 }
 
