Modified: categories of posts

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,6 +8,7 @@
         <input type="text" id="search-input" placeholder="Search or jump to...">
     </div>
     <div class="menu">
+        <a href="https://younsoo.notion.site/younsoo/05f1a0048db546ad877bfd645fc181b0" class="{% if page.url == '/about.html' %} current {% endif %}">PORTFOLIO</a>
         <a href="{{site.baseurl}}/about" class="{% if page.url == '/about.html' %} current {% endif %}">ABOUT</a>
     </div>
 </nav>
