--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
         <input type="text" id="search-input" placeholder="Search or jump to...">
     </div>
     <div class="menu">
-        <a href="https://github.com/tomlim2"
+        <a href="{{site.baseurl}}"
             class="{% if page.url == '/about.html' %} current {% endif %}">깃허브</a>
         <a href="https://younsoo.notion.site/younsoo/05f1a0048db546ad877bfd645fc181b0"
             class="{% if page.url == '/about.html' %} current {% endif %}">포트폴리오</a>
