--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,8 +50,10 @@
     </main>
 
     <footer class='{{page.mastfooterClass}}'>
-        <div class="content-container">이 웹사이트는 개발중이며 현재는 데스크탑 버전에 최적화 되어있습니다;)
-            <br> 임연수 ©2022. ALL RIGHTS RESERVED.
+        <div class="content-container">
+            이 웹사이트는 <a href="">개발중</a>이며 현재는 데스크탑 버전에 최적화 되어있습니다;)<br>
+            <br>
+            임연수 ©2022. ALL RIGHTS RESERVED.
         </div>
     </footer>
 
