Added: New post for mocha tester

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="nav-container">
     <div class="logo">
         <div class="img-wrapper">
-            <a href="{{site.baseurl}}"><img src="{{site.baseurl}}/favicon.png" alt="로고"></a>
+            <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/favicon.png" alt="로고"></a>
         </div>
     </div>
     <div class="menu search-container" id="search-container">
