Added: new post for user input custom hooks

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
         <a href="https://github.com/tomlim2" class="{% if page.url == '/about.html' %} current {% endif %}">깃허브</a>
         <a href="https://younsoo.notion.site/younsoo/05f1a0048db546ad877bfd645fc181b0"
             class="{% if page.url == '/about.html' %} current {% endif %}">포트폴리오</a>
-        <a href="{{site.baseurl}}/about" class="{% if page.url == '/about.html' %} current {% endif %}">ABOUT</a>
+        <a href="{{site.baseurl}}/about" class="{% if page.url == '/about.html' %} current {% endif %}">소개</a>
     </div>
 </nav>
 <ul class="results-container" id="results-container"></ul>
