Added: new posts for javascript method

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,9 @@
     <div class="menu">
         <a href="https://github.com/tomlim2" class="{% if page.url == '/about.html' %} current {% endif %}">깃허브</a>
         <a href="https://younsoo.notion.site/younsoo/05f1a0048db546ad877bfd645fc181b0"
-            class="{% if page.url == '/about.html' %} current {% endif %}">포트폴리오</a>
+            class="{% if page.url == '/about.html' %} current {% endif %}">개발자포폴</a>
+        <a href="http://tommlimm.net"
+            class="{% if page.url == '/about.html' %} current {% endif %}">디자이너포폴</a>
         <a href="{{site.baseurl}}/about" class="{% if page.url == '/about.html' %} current {% endif %}">소개</a>
     </div>
 </nav>
